--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,10 +28,7 @@ bind-key | split-window -h
 bind-key - split-window -v
 
 ## マウス操作を有効にする
-setw -g mode-mouse on
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
+set-option -g mouse on
 
 
 # ----------------------------------------------------------------------------
@@ -49,6 +46,3 @@ set-option -g status-left '#H:[#P]'
 # Wi-Fi、バッテリー残量、現在時刻
 # 最右に表示
 set-option -g status-right '#(get_ssid) #(battery -c tmux) [%Y-%m-%d(%a) %H:%M]'
-
-## ステータスバーのUTF-8サポートを有効にする
-set -g status-utf8 on
